bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/default_joint_positions.error_regex
default_joint_positions is not supported yet.
